bugFi(✔️) troca de quiz sem bugs)

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <link rel="stylesheet" href="../../Bootstrap/bootstrap4/css/bootstrap.min.css">
-        <link rel="stylesheet" href="../css/style.css">
-        <link rel="icon" href="../../chave.png">
-        <script src="../../jquery/jquery.min.js"></script>
-        <script src="../../Bootstrap/bootstrap4/js/bootstrap.bundle.min.js"></script>
+        <link rel="stylesheet" href="frameworks/bootstrap4/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="icon" href="chave.png">
+        <script src="frameworks/jquery/jquery.min.js"></script>
+        <script src="frameworks/bootstrap4/js/bootstrap.bundle.min.js"></script>
         <title>Quiz</title>
     </head>
     <body>
@@ -15,7 +15,7 @@
             <h1 class="quizTitle"></h1>
             <div class="dropdown">
                 <div class="btn-group">
-                    <button class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target="#modal">Start Quiz</button>
+                    <button id="buttonStartQuiz" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target="#modal">Start Quiz</button>
                     <button class="btn btn-outline-primary btn-lg dropdown-toggle" data-toggle="dropdown"></button>
                     <ul class="dropdown-menu"></ul>
                 </div>
@@ -39,8 +39,8 @@
                 </div>
             </div>
         </div>
-        <script src="../js/quizjson.js"></script>
-        <script src="../js/quizclass.js"></script>
-        <script src="../js/script.js"></script>
+        <script src="js/quizjson.js"></script>
+        <script src="js/quizclass.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
