--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-        <link rel="stylesheet" href="frameworks/bootstrap4/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="icon" href="chave.png">
-        <script src="frameworks/jquery/jquery.min.js"></script>
-        <script src="frameworks/bootstrap4/js/bootstrap.bundle.min.js"></script>
+        <link rel="stylesheet" href="./frameworks/bootstrap4/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./css/style.css">
+        <script src="./frameworks/jquery/jquery.min.js"></script>
+        <script src="./frameworks/bootstrap4/js/bootstrap.bundle.min.js"></script>
         <title>Quiz</title>
     </head>
     <body>
